--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,7 @@
 # This is a basic workflow to help you get started with Actions
 
 name: CI
-123
+
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo Hello, world! ${{ some-context.event_name }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
